# orgahome

./: .gitignore  README.md  app.py  flake.nix  pyproject.toml  treefmt.nix
.github/workflows/: ci.yml
orgahome/: __init__.py  app.py  cli.py  config.py  gif.py  middleware.py  puppetdb.py  services.py
orgahome/static/: main.js  style.css
orgahome/static/fonts/Outfit/: font.css
orgahome/templates/: base.html  index.html  machines.html  user.html
orgahome/templates/components/: user_card.html
orgahome/views/: auth.py  directory.py  machines.py  proxy.py
static/: main.js  style.css
templates/: index.html  user.html
templates/components/: user_card.html
