[project]
name = "orgahome"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "flask[async]>=3.1.2",
  "flask-oidc>=2.4.0",
  "python-dotenv>=1.2.1",
  "requests>=2.32.5",
]

[dependency-groups]
dev = ["ruff>=0.14.8", "ty>=0.0.1a32"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
orgahome = "orgahome:cli"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["F401"]
